<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oblig1.dat153.gettoknow.activities.AddPeople">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/add_last_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/addImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addImageButtonClicked"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:text="@string/add_image_button_text" />

        <Button
            android:id="@+id/addPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:onClick="completeButtonClicked"
            android:text="@string/addPersonButtonText"
            android:textColor="#ffffff" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
