<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oblig1.dat153.gettoknow.activities.MainActivity">

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:contextClickable="true"
            android:linksClickable="true"
            android:longClickable="true"
            android:onClick="button1Action"
            android:text="@string/main_page_button1" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:onClick="button2Action"
            android:text="@string/main_page_button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:onClick="button3Action"
            android:text="@string/main_page_button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:onClick="button4Action"
            android:text="@string/main_page_button4" />

        <Button
            android:id="@+id/preferencebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startPreferences"
            android:text="Button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
